# plist2flurry

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Plist.hpp
plist/: CMakeLists.txt
plist/include/: pugixml.hpp
src/: pugixml.cpp
tests/: CMakeLists.txt  test_anytypes.cpp
